upload artifact in Action

--- a/.github/workflows/ci-unit-tests.yml
+++ b/.github/workflows/ci-unit-tests.yml
@@ -11,10 +11,16 @@ jobs:
   gen-tests:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Init git submodules
-      run: make init-submodule
+      - name: Init git submodules
+        run: make init-submodule
 
-    - name: Run unit tests
-      run: make test-ci
+      - name: Run unit tests
+        run: make test-ci
+
+      - name: Upload build results
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-results
+          path: proto-gen-*/
